--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -7,20 +7,24 @@ a {text-decoration: none;}
 img {border: 0;}
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color:#989090;
+  font-family: source-Light;
 }
 
 input:-moz-placeholder, textarea:-moz-placeholder {
   color:#989090;
+  font-family: source-Light;
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   color:#989090;
+  font-family: source-Light;
 }
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   color:#989090;
+  font-family: source-Light;
 }
-html, body {height: 100%!important;overflow: auto;}
+html, body {height: 100%!important;overflow: auto;font-family: source-Regular;}
 input,button {outline: none!important;-webkit-appearance:none;}
 input,textarea {-webkit-appearance: none;appearance: none;-webkit-user-select:auto; /*webkit浏览器*/
   user-select:auto;-o-user-select:auto;-ms-user-select:auto;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
@@ -38,7 +42,7 @@ input,textarea {-webkit-appearance: none;appearance: none;-webkit-user-select:au
 button:hover,.info-qrcode span:hover,.down-keystroe span:hover,.money-list span:last-child:hover,
 .money-arr span:hover,.money-arr ul li:hover {cursor: pointer;}
 
-main h2 {color: #42535B;font-size: 1.7rem;font-weight: 500;}
+main h2 {color: #42535B;font-size: 1.7rem;font-weight: 500;font-family: source-Medium;}
 main .btn-active {background:linear-gradient(90deg,rgba(41,216,147,1) 0%,rgba(12,197,183,1) 100%)!important;}
 main .error-border {border: 1px solid #EE1C39!important;}
 
