--- a/src/assets/css/public.css
+++ b/src/assets/css/public.css
@@ -8,29 +8,34 @@ img {border: 0;}
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color:#989090;
   font-family: source-Light;
+  font-size: .7rem;
 }
 
 input:-moz-placeholder, textarea:-moz-placeholder {
   color:#989090;
   font-family: source-Light;
+  font-size: .7rem;
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
   color:#989090;
   font-family: source-Light;
+  font-size: .7rem;
 }
 
 input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   color:#989090;
   font-family: source-Light;
+  font-size: .7rem;
 }
 html, body {height: 100%!important;overflow: auto;font-family: source-Regular;}
 input,button {outline: none!important;-webkit-appearance:none;}
 input,textarea {-webkit-appearance: none;appearance: none;-webkit-user-select:auto; /*webkit浏览器*/
   user-select:auto;-o-user-select:auto;-ms-user-select:auto;-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
-
-
+input[type="password"] {font-family: Tahoma,Helvetica,Arial;}
+body {-webkit-overflow-scrolling: touch;}
+.body-hidden {overflow: hidden!important;height: 100%;}
 
 .el-container {max-width: 1170px;margin: 0 auto;padding: 0 15px;}
 .wallet-background {background: #fff;margin: 2.4rem 0 1.8rem;width: 100%;}
