--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -114,7 +114,7 @@ main {
     width: 5.4rem;
     height: 1.8rem;
     color: #fff;
-    font-size: 14px;
+    font-size: .7rem;
     border-radius: .5rem;
     background: linear-gradient(90deg, #29d893 0%, #0cc5b7 100%);
     border: none;
