--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -49,6 +49,10 @@ main {
     background: linear-gradient(90deg, #29d893 0%, #0cc5b7 100%) !important;
   }
 
+  .cantClick {
+    pointer-events: none!important;
+  }
+
   .error-border {
     @include border ($c: $colorRed !important, $d: bor);
   }
