--- a/src/assets/css/public.scss
+++ b/src/assets/css/public.scss
@@ -42,7 +42,7 @@ main {
     color: $colorTips;
     font-size: 1.7rem;
     font-weight: 500;
-    font-family: source-Medium;
+    //font-family: source-Medium;
   }
 
   .btn-active {
