--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -5,7 +5,7 @@ input,textarea,button {-webkit-appearance: none;appearance: none;outline: none}
 ul li {list-style: none;}
 a {text-decoration: none;}
 img {border: 0;}
-input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+/* input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
   color:#989090;
   font-family: source-Light;
   font-size: .7rem;
@@ -27,8 +27,28 @@ input:-ms-input-placeholder, textarea:-ms-input-placeholder {
   color:#989090;
   font-family: source-Light;
   font-size: .7rem;
+} */
+input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
+  color:#989090;
+  font-size: .7rem;
 }
-html, body {height: 100%!important;overflow: auto;font-family: source-Regular;}
+
+input:-moz-placeholder, textarea:-moz-placeholder {
+  color:#989090;
+  font-size: .7rem;
+}
+
+input::-moz-placeholder, textarea::-moz-placeholder {
+  color:#989090;
+  font-size: .7rem;
+}
+
+input:-ms-input-placeholder, textarea:-ms-input-placeholder {
+  font-family: source-Light;
+  font-size: .7rem;
+}
+
+html, body {height: 100%!important;overflow: auto;font-family: "Helvetica Neue", Helvetica, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;}
 input,button {outline: none!important;-webkit-appearance:none;}
 input,textarea {-webkit-appearance: none;appearance: none;-webkit-user-select:auto; /*webkit浏览器*/
   user-select:auto;-o-user-select:auto;-ms-user-select:auto;-webkit-tap-highlight-color: #000;
